feat: localize to Traditional Chinese and implement automatic query translation
- Translate all UI strings to Traditional Chinese (TW)
- Set default language to zh-TW in layout.tsx
- Update README and PWA manifest to Traditional Chinese
- Fix encoding issues in various components
- Add chinese-s2t dependency for search query and result metadata translation
- Automatically convert search queries to Simplified Chinese for better CMS API compatibility
- Automatically convert API results back to Traditional Chinese for UI consistency

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@vercel/analytics": "^1.6.1",
+    "chinese-s2t": "^1.0.0",
     "hls.js": "^1.6.15",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
